# cwai

./: .gitignore  README.md  pyproject.toml
src/cwai/: main.py
