[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwai"
version = "0.1.0"
description = "insights for cloudwatch logs with gen ai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.16",
    "rich>=13.8.1",
    "typer>=0.12.5",
]

[project.scripts]
cwai = "cwai.main:app"
